// <auto-generated />
using System;
using Dashboard.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace Dashboard.Migrations
{
    [DbContext(typeof(DashboardDbContext))]
    [Migration("20260618145517_RefactorNotificationEventStorage")]
    partial class RefactorNotificationEventStorage
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.9")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Dashboard.Models.SessionDashboardData", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("CorrectAnswers")
                        .HasColumnType("int");

                    b.Property<string>("DashboardId")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("NumberOfPayments")
                        .HasColumnType("int");

                    b.Property<int>("PaymentAmount")
                        .HasColumnType("int");

                    b.Property<int>("Questions")
                        .HasColumnType("int");

                    b.Property<int>("WrongAnswers")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.ToTable("SessionDashboardData", (string)null);
                });

            modelBuilder.Entity("Dashboard.Models.StoredAnswerDetails", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<bool>("IsCorrect")
                        .HasColumnType("bit");

                    b.Property<string>("QuestionId")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("SelectedOptionId")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("StoredNotificationEventId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("StoredNotificationEventId")
                        .IsUnique();

                    b.ToTable("StoredAnswerDetails", (string)null);
                });

            modelBuilder.Entity("Dashboard.Models.StoredNotificationEvent", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("SessionId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<DateTime>("TimeStamp")
                        .HasColumnType("datetime2");

                    b.Property<int>("Type")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("SessionId");

                    b.ToTable("StoredNotificationEvents", (string)null);
                });

            modelBuilder.Entity("Dashboard.Models.StoredPurchaseConfirmationDetails", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("Amount")
                        .HasColumnType("int");

                    b.Property<string>("PurchaseId")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("SessionId")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("StoredNotificationEventId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("StoredNotificationEventId")
                        .IsUnique();

                    b.ToTable("StoredPurchaseConfirmationDetails", (string)null);
                });

            modelBuilder.Entity("Dashboard.Models.StoredAnswerDetails", b =>
                {
                    b.HasOne("Dashboard.Models.StoredNotificationEvent", "StoredNotificationEvent")
                        .WithOne("AnswerDetails")
                        .HasForeignKey("Dashboard.Models.StoredAnswerDetails", "StoredNotificationEventId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("StoredNotificationEvent");
                });

            modelBuilder.Entity("Dashboard.Models.StoredPurchaseConfirmationDetails", b =>
                {
                    b.HasOne("Dashboard.Models.StoredNotificationEvent", "StoredNotificationEvent")
                        .WithOne("PurchaseConfirmationDetails")
                        .HasForeignKey("Dashboard.Models.StoredPurchaseConfirmationDetails", "StoredNotificationEventId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("StoredNotificationEvent");
                });

            modelBuilder.Entity("Dashboard.Models.StoredNotificationEvent", b =>
                {
                    b.Navigation("AnswerDetails");

                    b.Navigation("PurchaseConfirmationDetails");
                });
#pragma warning restore 612, 618
        }
    }
}
